--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kaliber/library",
-  "version": "1.0.0",
+  "name": "@kaliber/scrape-cookies",
+  "version": "0.0.0",
   "main": "index.js",
   "sideEffects": false,
   "publishConfig": {
@@ -18,6 +18,6 @@
   ],
   "private": false,
   "license": "MIT",
-  "description": "A short description",
-  "repository": "https://github.com/kaliberjs/library.git"
+  "description": "Scrape cookies with all the necessary information for display on a cookie policy page",
+  "repository": "https://github.com/kaliberjs/scrape-cookies.git"
 }
